# crop-health-model

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml  continous-integration.yaml  lint.yaml  main-release.yml
build_image/api/: custom_openapi.py  redoc.py  settings.py
build_image/docker/: Dockerfile  config.properties  dockerd-entrypoint.sh
build_image/ts_scripts/: install_dependencies.py
crop_health_model/configs/: config.yaml  config_binary.yaml  config_multi_HLT.yaml  config_single_HLT.yaml
crop_health_model/data/: make_annotations_file.py  make_dataset.py  metadata.py
crop_health_model/datasets/: datamodule.py  dataset.py
crop_health_model/engines/: callbacks.py  system.py
crop_health_model/models/: model  model.py
crop_health_model/scripts/: train.py
crop_health_model/tests/: test_dataset_init.py  test_model_init.py
crop_health_model/utils/: utils.py
csv_logs/binary/version_0/: metrics.csv
csv_logs/binary/version_1/: metrics.csv
csv_logs/binary/version_2/: metrics.csv
csv_logs/binary/version_3/: hparams.yaml  metrics.csv
csv_logs/multi_HLT/version_0/: metrics.csv
csv_logs/multi_HLT/version_1/: hparams.yaml  metrics.csv
csv_logs/multi_HLT/version_2/: metrics.csv
csv_logs/multi_HLT/version_3/: metrics.csv
csv_logs/single_HLT/version_0/: metrics.csv
csv_logs/single_HLT/version_1/: metrics.csv
csv_logs/single_HLT/version_2/: metrics.csv
csv_logs/single_HLT/version_3/: metrics.csv
deployment/argocd/: app.yaml
deployment/kubernetes/: crop-health-api.yaml  crop-health-model-api.yaml
(+29 files in other folders)
